# emscripten_game_blob

./: .gitignore  CMakeLists.txt  README.md  install.sh  run.sh  rundev.sh
.clangd/index/: Collision_corners.cpp.908A5AC149115253.idx  Collision_corners.hpp.16869591C32CE239.idx  animated_sprite.cpp.3FB590A41D33F6BB.idx  animated_sprite.hpp.494367DF97B0F103.idx  apple.cpp.92FEA3B8EFF2FF5E.idx  apple.hpp.F967AD6060AEDA39.idx  collision_system.cpp.6D72DB658579D22C.idx  collision_system.hpp.14E80593C232377F.idx  components.hpp.C654400ABE4D6DD6.idx  consumable_system.cpp.01107CAF2D0A5425.idx  consumable_system.hpp.01A4F533D538DE00.idx  entt.hpp.5A4422184BA6535B.idx  factories.cpp.0873029ECA7B79B8.idx  factories.hpp.F0629B7F654F42CA.idx  game.cpp.A26F5C5B9F13E89E.idx  game.h.7B1218C44307B28A.idx  game.hpp.0990EA9A51EBB998.idx  gravity_system.cpp.2472BD559A7486F3.idx  gravity_system.hpp.0CA652726A5D616C.idx  keyboard.hpp.6CCEEEFB8A13E5FD.idx  main.cpp.FAE31066EC774A9C.idx  move_system.cpp.6E3D1CF6F5A80B25.idx  move_system.hpp.007F3073A4D5A41F.idx  player_system.cpp.2A2CBF60671DD20F.idx  player_system.hpp.BA80FCAF603B89E6.idx  render_system.cpp.6154CF151873D805.idx  render_system.hpp.6B800CEE130DE2C4.idx  screen.hpp.8BF2C78C3F911258.idx  text.cpp.275506647AC5B09E.idx  text.hpp.2D14B29434A96CB7.idx  text_system.cpp.68A953FCA61DE2F0.idx  text_system.hpp.87BA53F302AB7F02.idx  texture.cpp.43386DE2DE12B567.idx  texture.hpp.1D88423B0791D9E8.idx  tilemap.cpp.7F2B68A84935DAB5.idx  tilemap.hpp.FB1A665A41A8A28E.idx  tilemap_generator.cpp.4FDD18070EE86C5D.idx  timer.cpp.8B70DB57B5A56050.idx  timer.hpp.19467C409389993A.idx  utils.cpp.1593021901CA0B76.idx  (+1 more)
cmake/: FindSDL2.cmake
include/blob/: game.h
src/: Collision_corners.cpp  Collision_corners.hpp  animated_sprite.cpp  animated_sprite.hpp  collision_object.hpp  collision_system.cpp  collision_system.hpp  components.hpp  concretes.hpp  consumable_system.cpp  consumable_system.hpp  factories.cpp  factories.hpp  game.cpp  game.hpp  gravity_system.cpp  gravity_system.hpp  keyboard.hpp  main.cpp  move_system.cpp  move_system.hpp  player_system.cpp  player_system.hpp  render_system.cpp  render_system.hpp  screen.hpp  text.cpp  text.hpp  text_system.cpp  text_system.hpp  texture.cpp  texture.hpp  tilemap.cpp  tilemap.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp
src/items/: apple.cpp  apple.hpp
